--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Conexão Campo e Cidade</h1>
+    <h1>Cidade e Campo: Uma Só Colheita</h1>
     <p>Unindo saberes, sabores e soluções sustentáveis</p>
   </header>
 
